<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dechi</string>
    <string name="register1">设置您的企业基本信息</string>
    <string name="register2">业务联系人1</string>
    <string name="register3">开票联系人</string>
    <string name="action_settings">Settings</string>
    <string name="Name">   德驰科技</string>
    <string name="inputname">请输入您的用户名...</string>
    <string name="inputpwd">请输入您的密码...</string>
    <string name="inputcheck">如右图</string>
    <string name="planet_prompt">mcmc</string>
    <string name="vip_activity">会员客户登陆</string>
    <string name="com_activity">公司员工登陆</string>
    <string name="vip_left">现货交易</string>
    <string name="vip_right">客户服务</string>
    <string name="com_left">信息审批</string>
    <string name="com_right">业务报表</string>

</resources>