<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/softname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/Name"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/usrtype"
            style="@style/textview_style"
            android:text="请选择用户类别:" />

        <Spinner
            android:layout_marginLeft="30dp"
            android:id="@+id/spinner"
            android:layoutMode="opticalBounds"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawSelectorOnTop="true"
            android:prompt="@string/planet_prompt"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/usrname"
            style="@style/textview_style"
            android:text="账号:" />

        <EditText
            android:id="@+id/input_name"
            style="@style/edittext_style"
            android:hint="@string/inputname" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/usrpwd"
            style="@style/textview_style"
            android:text="密码:" />

        <EditText
            android:id="@+id/inputpwd"
            style="@style/edittext_style"
            android:hint="@string/inputpwd"
            android:inputType="textPassword" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/check"
            style="@style/textview_style"
            android:text="验证码:" />

        <EditText
            android:id="@+id/inputcheck"
            style="@style/edittext_style"
            android:layout_width="100dp"
            android:ems="10"
            android:hint="@string/inputcheck" >
        </EditText>
    </LinearLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="记住我"
        android:textColor="#111111" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/confirm"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:onClick="onClick_confirm"
            android:text="确定" />

        <Button
            android:id="@+id/clear"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"
            android:onClick="onClick_clear"
            android:text="清空" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom|right"
        android:orientation="vertical" >

        <Button
            android:id="@+id/newusr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/newusr"
            android:text="新用户"
            android:textColor="#1e90ff"
            android:onClick="onClick_newUsr" />
    </LinearLayout>

</LinearLayout>